--- a/index.html
+++ b/index.html
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mary Hardy Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <nav><h1>Saf<span id="yellow">i</span>n</h1>
-    
-<div class="nav-list"><ul class="ul"><li>Portfolio</li><li>Blog</li></ul><Button class="hireme-button">Hire Me</Button></div> </nav>
-<section><p>Hi I am</p>
-<h1>Junaid Ahmed Safin</h1></section>
+    <nav>
+        <h1>Saf<span id="yellow">I</span>n</h1>
+
+        <div class="nav-list">
+            <ul class="ul">
+                <li><a href="https://www.facebook.com/junaidahmed.safin/">Portfolio</li></a>
+                <li><a href="https://www.facebook.com/junaidahmed.safin/">Blog</li></a>
+            </ul><Button class="hireme-button"><a href="https://www.facebook.com/junaidahmed.safin/">Hire Me</Button></a>
+        </div>
+    </nav>
+    <section>
+        <div class="content1">
+            <div class="content">
+                <p class="hi">Hi I am</p>
+                <h1 class="name">Junaid Ahmed Safin</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
+                <div class="contact-button-margin"><div class="download-button-margin"><button class="download-button"><a href="https://www.facebook.com/junaidahmed.safin/">↓ Download CV</button></a></div><div class="contact-button-margin"><button class="contact-button"><a href="https://www.facebook.com/junaidahmed.safin/">📞Contact</button></a></div></div>
+            </div>
+            <div class="image-div"><img class="my-img" src="./images/hardy.png" alt=""></div>
+        </div>
+
+    </section>
 
 
 
-    
+
 </body>
+
 </html>
