--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <ul class="ul">
                 <li><a href="https://www.facebook.com/junaidahmed.safin/">Portfolio</li></a>
                 <li><a href="https://www.facebook.com/junaidahmed.safin/">Blog</li></a>
-            </ul><Button class="hireme-button"><a href="https://www.facebook.com/junaidahmed.safin/">Hire Me</Button></a>
+            </ul><Button class="hireme-button"><a href="https://www.facebook.com/junaidahmed.safin/">Hire
+                    Me</Button></a>
         </div>
     </nav>
     <section>
@@ -30,13 +31,68 @@
                 <h1 class="name">Junaid Ahmed Safin</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
                     behaved moments.</p>
-                <div class="contact-button-margin"><div class="download-button-margin"><button class="download-button"><a href="https://www.facebook.com/junaidahmed.safin/">↓ Download CV</button></a></div><div class="contact-button-margin"><button class="contact-button"><a href="https://www.facebook.com/junaidahmed.safin/">📞Contact</button></a></div></div>
+                <div class="contact-button-margin">
+                    <div class="download-button-margin"><button class="download-button"><a
+                                href="https://www.facebook.com/junaidahmed.safin/">↓ Download CV</button></a></div>
+                    <div class="contact-button-margin"><button class="contact-button"><a
+                                href="https://www.facebook.com/junaidahmed.safin/">📞Contact</button></a></div>
+                </div>
             </div>
             <div class="image-div"><img class="my-img" src="./images/hardy.png" alt=""></div>
         </div>
 
     </section>
 
+
+    <section class="content2">
+        <div class="full-about-me">
+            <div class="about-me">
+                <h1>About Me</h1>
+                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                    websites that provide real value to the end user. Thousands of clients have procured exceptional
+                    resulfs while working with me. Delivering work within time and budget which meets clients
+                    requirements in our mata.</p>
+            </div>
+            <div class="contact-info">
+                <div>
+                    <p>Name</p>
+                    <h1>Safin</h1>
+                </div>
+                <div>
+                    <p>Email</p>
+                    <h1>Safinj34@gmail.com</h1>
+                </div>
+                <div>
+                    <p>Date</p>
+                    <h1>11 November 1987</h1>
+                </div>
+                <div>
+                    <p>form</p>
+                    <h1>Bhairabh,Kishorganj ,Bangladesh</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="bg-color-for-section2">
+
+            <div class="what-i-do-section">
+                <h1>What I do</h1>
+                <p>I have more than 10 years experience building software for clients all over the world. Below is a
+                    quick overview of my main technical skill sets and technologies i use. Want to find out more about
+                    my experience? Check out my online resume and project portfolio.</p>
+            </div>
+
+
+            <div class="languages">
+                <div class="language"><img src="./images/icons/js.png" alt=""><p>Vanilla JavaScript</p><p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p></div>
+                <div class="language"><img src="./images/icons/react.png" alt=""><p>React</p><p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p></div>
+                <div class="language"><img src="./images/icons/nodejs.png" alt=""><p>Node.js</p><p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p></div>
+                <div class="language"><img src="./images/icons/mongo.png" alt=""><p>Mondo DB</p><p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p></div>
+            </div>
+
+        </div>
+    </section>
 
 
 
