--- a/index.html
+++ b/index.html
@@ -165,28 +165,16 @@
         </div>
     </section>
 
-    <section class="last-section-bg">
-
-        <div class="footer">
-        <div class="socialmedia-link">
-            <h1>Lets Connect</h1>
-            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
-                Monday through Friday.</p>
-        
-        <div><img src="./images/icons/facebook.png" alt=""><img src="./images/icons/twitter.png" alt=""><img
-                src="./images/icons/insta.png" alt=""></div></div>
-        <div class="fotter-text">
-
-
-<div class="fotter-margin">
-
-            <h1>Message Me</h1>
-            <div class="info"><textarea class="text-info" placeholder="Name" name="Your Name" id=""></textarea></div>
-            <div class="info"><textarea class="text-info" placeholder="Email" name="email" id=""></textarea></div>
-            <div class="info"><textarea class="text-info1" placeholder="Message" name="Message" id=""></textarea><br>
-            <button class="download-button">Submit</button></div>
-        </div></div>
-    </div></section>
+    <footer class="bg-color-for-section3">
+        <div class="footer-column">
+            <h1 class="name">Lets Connect</h1>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div><a href="www.facebook.com"><img src="images/icons/facebook.png" alt=""></a>
+            <a href="https://www.instagram.com/"><img src="images/icons/insta.png" alt=""></a>
+            <a href="www.x.com"><img src="images/icons/twitter.png" alt=""></a></div>
+        </div>
+        <div class="footer-column1"><h3 class="name">Message me</h3><form action=""><input type="text" placeholder="Name"><input type="text" placeholder="Email" name="" id=""><textarea name="textarea" placeholder="Message" id="" cols="30" rows="20"></textarea><input class="hireme-button" type="submit" value="Submit"></form></div>
+    </footer>
 
 </body>
 
