responsive margin fix

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
     </section>
     <section>
-        <div class="bg-color-for-section2 b">
+        <div class="bg-color-for-section2">
 
             <div class="what-i-do-section">
                 <h1>What I do</h1>
